# cereal

./: .gitmodules  readme.md
assistent/: Cargo.toml  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json
assistent/src/: app.rs  index.scss  main.tsx
assistent/src-tauri/: Cargo.toml  tauri.conf.json
assistent/src-tauri/src/: lib.rs  lib2.rs  main.rs
assistent/src/app/: app.module.scss  app.tsx
assistent/src/app/dashbaord/: dashboard.tsx
leptos-tutorial/src/: main.rs
poem-openapi/: Cargo.toml  readme.md
poem-openapi/src/: generated.rs  main.rs  post.rs  prisma_openapi.rs
poem_openapi/: readme.md
poem_openapi/grpc/: readme.md
poem_openapi/src/: main.rs
prisma-schema/: .gitignore  package.json
prisma-schema/prisma/: schema.prisma
prisma_schema/: package-lock.json  package.json  readme.md
prisma_schema/prisma/: schema.prisma  schema_de.prisma
random_serials/: Cargo.toml
random_serials/_output/: output.csv
random_serials/src/: main.rs
supabase/: config.toml
