[package]
name = "poem_openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poem = "1.3.57"
poem-openapi = { version = "3.0.0", features = ["swagger-ui", "openapi-explorer"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "time", "chrono"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
