[package]
name = "cereal-poem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
poem = "1.3.57"
poem-openapi = { version = "3.0.0", features = [
  "swagger-ui",
  "openapi-explorer",
  "chrono",
] }
sqlx = { version = "0.7.1", features = [
  "postgres",
  "runtime-tokio",
  "time",
  "chrono",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
